--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://taitugou.icu/">
+    <meta property="og:url" content="https://taitugou.icu/">
     <meta property="og:title" content="TTG 导航 | 免费匿名聊天室 & 在线交友平台">
     <meta property="og:description" content="加入 TTG 匿名聊天室，体验免费的实时陌生人匹配与多人在线聊天。内置德州扑克与五子棋，让交友更有趣。无需下载，点击即聊。">
-    <meta property="og:image" content="http://taitugou.icu/f.ico">
+    <meta property="og:image" content="https://taitugou.icu/f.ico">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="http://taitugou.icu/">
+    <meta property="twitter:url" content="https://taitugou.icu/">
     <meta property="twitter:title" content="TTG 导航 | 免费匿名聊天室 & 在线交友平台">
     <meta property="twitter:description" content="加入 TTG 匿名聊天室，体验免费的实时陌生人匹配与多人在线聊天。内置德州扑克与五子棋，让交友更有趣。无需下载，点击即聊。">
-    <meta property="twitter:image" content="http://taitugou.icu/f.ico">
+    <meta property="twitter:image" content="https://taitugou.icu/f.ico">
 
     <link rel="icon" href="f.ico" type="image/x-icon">
-    <link rel="canonical" href="http://taitugou.icu/">
+    <link rel="canonical" href="https://taitugou.icu/">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
