--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- SEO Meta Tags -->
     <title>TTG 导航 | 在线聊天室 & 免费匿名交友 - 网页版实时互动平台</title>
     <meta name="description" content="TTG 导航 - 您的首选在线聊天与匿名社交平台。提供免费、无需下载的网页版在线聊天服务。随时随地在线找人聊天，体验在线随机匹配、多人在线聊天室、在线扩列与即时通讯。内置在线德州扑克、五子棋等游戏，实现边玩边聊的在线游戏社交体验。加入 TTG Chat，开启您的在线私密社交之旅。">
-    <meta name="keywords" content="TTG, TTG Chat, taitugou, 胎土狗, 在线聊天, 在线聊天室, 网页在线聊天, 免费在线聊天, 在线交友, 在线匹配, 在线找人, 在线即时通讯, 免下载聊天, 浏览器聊天, Web聊天室, H5聊天, 在线陌生人聊天, 在线扩列, 在线陪聊, 游戏在线聊天, 边玩边聊, 实时在线互动, 同城在线聊天, 在线树洞, 聊天, 匿名聊天, 匿名交友, 德州扑克, 五子棋">
+    <meta name="keywords" content="TTG, TTG Chat, taitugou, 胎土狗, 在线聊天, 在线聊天室, 网页在线聊天, 免费在线聊天, 在线交友, 在线匹配, 在线找人, 在线即时通讯, 免下载聊天, 浏览器聊天, Web聊天室, H5聊天, 在线陌生人聊天, 在线扩列, 在线陪聊, 游戏在线聊天, 边玩边聊, 实时在线互动, 同城在线聊天, 在线树洞, 聊天, 匿名聊天, 匿名交友, 德州扑克, 五子棋, 聊天室, 群聊, 社群, 社区, 论坛, 讨论组, 聊天大厅, 语音房, 语音聊天室, 视频聊天室, 文字聊天室, 匿名聊天室, 随机聊天, 随机匹配聊天, 1对1聊天, 多人聊天室, 公开聊天室, 私密聊天室, 主题聊天室, 兴趣社群, 同城聊天室, 同好会, 交友房间, 匹配交友, 即时聊天, 实时聊天, 线上聊天, 网络聊天室, APP聊天室, 语音派对, 语音沙龙, 树洞, 倾诉聊天, 连麦, 开黑语音, 游戏语音房, K歌房, 语音直播房, 围观聊天, 旁听聊天, 速配聊天, 灵魂匹配, 语音匹配, 视频匹配, 盲盒聊天, 话题聊天室, 情绪聊天室, 陪伴聊天, 深夜聊天室, 学习自习室, 行业交流群, 技术沙龙, 公会, 部落, 俱乐部, 频道, 服务器, 圈子, 小组, 会话, 会议室, 虚拟房间, 线上空间, 交流平台, 对话广场, 公共聊天区, 灌水区, 留言板, 贴吧, 版聊, 房间号, 密码房, 加密聊天室, 临时会话, 破冰聊天, 社交匹配, 声音社交, 语音社交, 视频社交, 文字社交, 轻社交, 陌生人社交, 半熟人社交, 兴趣社交, 场景社交, 陪伴型社交, 语聊, 唠嗑, 挂厅, CPDD, 处友, 扩列, 连麦睡觉, 异步聊天, 慢社交, 元宇宙聊天室">
     <meta name="author" content="TTG Team">
     <meta name="robots" content="index, follow">
 
@@ -59,6 +59,7 @@
                     "name": "TTG 导航 | 在线聊天室 & 免费匿名交友",
                     "isPartOf": { "@id": "https://home.taitugou.top/#website" },
                     "about": { "@id": "https://home.taitugou.top/#org" },
+                    "keywords": "TTG, TTG Chat, taitugou, 胎土狗, 在线聊天, 在线聊天室, 网页在线聊天, 免费在线聊天, 在线交友, 在线匹配, 在线找人, 在线即时通讯, 免下载聊天, 浏览器聊天, Web聊天室, H5聊天, 在线陌生人聊天, 在线扩列, 在线陪聊, 游戏在线聊天, 边玩边聊, 实时在线互动, 同城在线聊天, 在线树洞, 聊天, 匿名聊天, 匿名交友, 德州扑克, 五子棋, 聊天室, 群聊, 社群, 社区, 论坛, 讨论组, 聊天大厅, 语音房, 语音聊天室, 视频聊天室, 文字聊天室, 匿名聊天室, 随机聊天, 随机匹配聊天, 1对1聊天, 多人聊天室, 公开聊天室, 私密聊天室, 主题聊天室, 兴趣社群, 同城聊天室, 同好会, 交友房间, 匹配交友, 即时聊天, 实时聊天, 线上聊天, 网络聊天室, APP聊天室, 语音派对, 语音沙龙, 树洞, 倾诉聊天, 连麦, 开黑语音, 游戏语音房, K歌房, 语音直播房, 围观聊天, 旁听聊天, 速配聊天, 灵魂匹配, 语音匹配, 视频匹配, 盲盒聊天, 话题聊天室, 情绪聊天室, 陪伴聊天, 深夜聊天室, 学习自习室, 行业交流群, 技术沙龙, 公会, 部落, 俱乐部, 频道, 服务器, 圈子, 小组, 会话, 会议室, 虚拟房间, 线上空间, 交流平台, 对话广场, 公共聊天区, 灌水区, 留言板, 贴吧, 版聊, 房间号, 密码房, 加密聊天室, 临时会话, 破冰聊天, 社交匹配, 声音社交, 语音社交, 视频社交, 文字社交, 轻社交, 陌生人社交, 半熟人社交, 兴趣社交, 场景社交, 陪伴型社交, 语聊, 唠嗑, 挂厅, CPDD, 处友, 扩列, 连麦睡觉, 异步聊天, 慢社交, 元宇宙聊天室",
                     "inLanguage": "zh-CN"
                 }
             ]
