Update TTG Chat link and modal layout

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                 <img src="f.ico" alt="Logo" class="modal-logo">
                 <div>
                     <h2>TTG Chat</h2>
-                    <a href="http://taitugou.top:888/" target="_blank" class="btn-primary">立即访问 <span class="icon" aria-hidden="true">🚀</span></a>
                 </div>
             </div>
+            <a href="https://taitugou.top:888" target="_blank" class="btn-primary" style="width: 100%; justify-content: center; margin-bottom: 2rem;">立即访问 <span class="icon" aria-hidden="true">🚀</span></a>
             
             <div class="modal-body">
                 <p class="intro-text">TTG Chat 是一个结合即时通讯、社区动态、智能匹配及在线游戏的全方位社交平台。</p>
