--- a/chat.html
+++ b/chat.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
 
-            <a href="http://taitugou.top:888/" target="_blank" class="card">
+            <a href="https://taitugou.top:888" target="_blank" class="card">
                 <div class="card-content">
                     <div class="card-icon">
                         <span class="icon" aria-hidden="true">🚀</span>
